--- a/eleme/src/main/resources/application.yml
+++ b/eleme/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/eleme?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/waimai?serverTimezone=UTC
     username: root
-    password: root
+    password: 123456
   mail:
     host: smtp.qq.com
     username: 3048680694@qq.com
